Moved all files into namespaced folder to allow implementation of IoC

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 
   "autoload": {
     "psr-4": {
-      "Fudge\\SilexComponents\\ContainerAware\\": "src/"
+      "Fudge\\SilexComponents\\": "src/"
     }
   },
 
